Fix chart overflow

--- a/src/app/features/admin/dashboard/dashboard.component.scss
+++ b/src/app/features/admin/dashboard/dashboard.component.scss
@@ -56,9 +56,11 @@
   border-radius: .5rem;
   padding: 1rem;
   background: var(--purple-contrast);
+  max-height: 60vh;
+  overflow: hidden;
 
   canvas {
     max-width: 100%;
-    height: auto;
+    height: 100%;
   }
 }
